logs/django-kamasutra.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_kamasutra-0.2.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/positions'...
Listing './lib/python3.5/site-packages/positions/fixtures'...
Listing './lib/python3.5/site-packages/positions/templates'...
Listing './lib/python3.5/site-packages/positions/templates/admin'...
Listing './lib/python3.5/site-packages/positions/templates/admin/positions'...
Listing './lib/python3.5/site-packages/positions/templates/position_test'...
Listing './lib/python3.5/site-packages/positions/templates/positions'...
Listing './lib/python3.5/site-packages/positions/templates/positions/render'...
Listing './lib/python3.5/site-packages/positions/templatetags'...
Compiling './lib/python3.5/site-packages/positions/templatetags/position_tags.py'...
***   File "./lib/python3.5/site-packages/positions/templatetags/position_tags.py", line 189
    raise TemplateSyntaxError, "Tag %s takes at least 3 arguments." % argv[0]
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
